--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
               <li><a href="#"><i class="icon-group"></i> Who Are We?</a></li>
-              <li><a href="#"><i class="icon-cogs"></i> Activities</a></li>
+              <li><a href="#"><i class="icon-cog"></i> Activities</a></li>
               <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
               <li><a href="#"><i class="icon-envelope"></i> Contacts</a></li>
             </ul>
@@ -36,6 +36,14 @@
     </header>
     <section class="container">
       <div class="jumbotron">
+        <div class="pull-left">
+            <h1>
+                <span class="icon-stack">
+                    <i class="icon-circle icon-4x icon-stack-base"></i>
+                    <i class="icon-cogs icon-4x icon-light"></i>
+                </span>
+            </h1>
+        </div>
         <h1>Hi there!</h1>
         <p>Bacon ipsum dolor sit amet pork belly filet mignon brisket pork chop kielbasa shankle flank tri-tip meatloaf short loin bacon shank ham hock turducken. Sirloin spare ribs hamburger short ribs doner ribeye leberkas ham biltong ground round, sausage rump. Pastrami capicola ball tip shank pork belly pork chop drumstick strip steak meatball ribeye pork loin ground round brisket corned beef meatloaf. Tail turducken chicken jerky hamburger bresaola pancetta capicola sausage sirloin beef ribs. Strip steak beef bacon tongue salami, shankle leberkas jowl pork. Pork belly pork chop shank, doner turkey boudin brisket.</p>
       </div>
