--- a/index.html
+++ b/index.html
@@ -36,20 +36,30 @@
     </header>
     <section class="container">
       <div class="jumbotron">
-        <div class="pull-left">
-            <h1>
-                <span class="icon-stack">
-                    <i class="icon-circle icon-4x icon-stack-base"></i>
-                    <i class="icon-cogs icon-4x icon-light"></i>
-                </span>
-            </h1>
+        <div class="row">
+          <div class="span12">
+            <div class="pull-left">
+                <h1>
+                    <span class="icon-stack">
+                        <i class="icon-circle icon-4x icon-stack-base"></i>
+                        <i class="icon-cogs icon-4x icon-light"></i>
+                    </span>
+                </h1>
+            </div>
+            <h1>Hi there!</h1>
+            <p>Bacon ipsum dolor sit amet pork belly filet mignon brisket pork chop kielbasa shankle flank tri-tip meatloaf short loin bacon shank ham hock turducken. Sirloin spare ribs hamburger short ribs doner ribeye leberkas ham biltong ground round, sausage rump. Pastrami capicola ball tip shank pork belly pork chop drumstick strip steak meatball ribeye pork loin ground round brisket corned beef meatloaf. Tail turducken chicken jerky hamburger bresaola pancetta capicola sausage sirloin beef ribs. Strip steak beef bacon tongue salami, shankle leberkas jowl pork. Pork belly pork chop shank, doner turkey boudin brisket.</p>
+          </div>
         </div>
-        <h1>Hi there!</h1>
-        <p>Bacon ipsum dolor sit amet pork belly filet mignon brisket pork chop kielbasa shankle flank tri-tip meatloaf short loin bacon shank ham hock turducken. Sirloin spare ribs hamburger short ribs doner ribeye leberkas ham biltong ground round, sausage rump. Pastrami capicola ball tip shank pork belly pork chop drumstick strip steak meatball ribeye pork loin ground round brisket corned beef meatloaf. Tail turducken chicken jerky hamburger bresaola pancetta capicola sausage sirloin beef ribs. Strip steak beef bacon tongue salami, shankle leberkas jowl pork. Pork belly pork chop shank, doner turkey boudin brisket.</p>
       </div>
-      <p>Bresaola jerky frankfurter corned beef salami sausage. Jowl corned beef ground round filet mignon salami spare ribs biltong bacon kielbasa swine hamburger bresaola tongue pastrami. Chicken filet mignon flank spare ribs pork belly pig. Ham chuck short ribs boudin, jowl biltong capicola ham hock corned beef pork loin kielbasa beef ribs brisket meatloaf. Frankfurter pork loin bacon, boudin sirloin ham hock sausage pastrami doner hamburger tail salami venison bresaola. Kielbasa short loin doner shankle pork belly pastrami.</p>
-      <p>Turducken chicken pork chop ball tip ground round turkey. Ham hock meatloaf jowl beef ribs pork loin brisket. T-bone ball tip leberkas tail short loin drumstick kielbasa pastrami. Ribeye tri-tip doner, brisket salami pancetta kielbasa. Hamburger sausage tri-tip, chuck ham fatback meatloaf.</p>
-      <p>Tenderloin bacon bresaola pastrami pork chop turkey ham hock fatback tri-tip kielbasa pork loin frankfurter. Pancetta beef chuck boudin. Bresaola brisket ham turkey boudin salami biltong ham hock pork chop. Jerky shankle tail, fatback spare ribs kielbasa salami meatball filet mignon leberkas beef ribs.</p>
+      <div class="row">
+        <div class="span4">
+        </div>
+        <div class="span8">
+          <p>Bresaola jerky frankfurter corned beef salami sausage. Jowl corned beef ground round filet mignon salami spare ribs biltong bacon kielbasa swine hamburger bresaola tongue pastrami. Chicken filet mignon flank spare ribs pork belly pig. Ham chuck short ribs boudin, jowl biltong capicola ham hock corned beef pork loin kielbasa beef ribs brisket meatloaf. Frankfurter pork loin bacon, boudin sirloin ham hock sausage pastrami doner hamburger tail salami venison bresaola. Kielbasa short loin doner shankle pork belly pastrami.</p>
+          <p>Turducken chicken pork chop ball tip ground round turkey. Ham hock meatloaf jowl beef ribs pork loin brisket. T-bone ball tip leberkas tail short loin drumstick kielbasa pastrami. Ribeye tri-tip doner, brisket salami pancetta kielbasa. Hamburger sausage tri-tip, chuck ham fatback meatloaf.</p>
+          <p>Tenderloin bacon bresaola pastrami pork chop turkey ham hock fatback tri-tip kielbasa pork loin frankfurter. Pancetta beef chuck boudin. Bresaola brisket ham turkey boudin salami biltong ham hock pork chop. Jerky shankle tail, fatback spare ribs kielbasa salami meatball filet mignon leberkas beef ribs.</p>
+        </div>
+      </div>
     </section>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
   </body>
